# dbd-skill-check-simulator

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-check.yml  desktop-build.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/audio/: SkillAudio.ts
src/components/: AttemptHistory.tsx  LeaderboardPanel.tsx  ModeSelector.tsx  SettingsPanel.tsx  SkillCheckCanvas.tsx  StatsPanel.tsx  TopBar.tsx
src/modes/: definitions.ts
src/store/: gameStore.ts
src/systems/: InputController.ts  SkillCheckEngine.ts  evaluateAttempt.ts
src/types/: game.ts
src/utils/: angle.ts  format.ts  input.ts
