[package]
name = "dbd-skill-check-simulator"
version = "0.1.1"
description = "Dead by Daylight style skill check simulator"
authors = ["Kasra Jamei"]
edition = "2021"
license = "MIT"
repository = ""

[lib]
name = "dbd_skill_check_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
